--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     <div class="site-header-inner">
       <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-        <img src="{{ '/assets/images/your-logo.png' | relative_url }}" alt="{{ site.title | escape }} Logo" class="site-logo">
+        <img src="{{ '/assets/img/logo.png' | relative_url }}" alt="{{ site.title | escape }} Logo" class="site-logo">
         {{ site.title | escape }} </a>
 
       <nav class="site-nav">
